components/build-service/base/.tekton/build-webhook-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    build.appstudio.openshift.io/application: alpo-studio
    build.appstudio.openshift.io/build: "true"
    build.appstudio.openshift.io/component: build-service
    build.appstudio.openshift.io/type: build
    build.appstudio.openshift.io/version: "0.1"
    pipelines.appstudio.openshift.io/type: build
  creationTimestamp: null
  name: elbuild-service
  namespace: alpo-studio
spec:
  path: /
  port:
    targetPort: 8080
  to:
    kind: Service
    name: el-build-service
    weight: null
status: {}
